@@ -1,4 +1,5 @@
 
+ - Changed: Minor changes...
  - New:    Multibyte section filtering e.g. -f 0x4e2f1c -m 0xFFFFFF (tnx to ghostrider, tuxbox-team)
  - Bugfix: dvr device open set to read only 
  - Bugfix: data broadcast descriptor (tnx to Sergio SAGLIOCCO, SecureLAB)
